--- a/common_style.css
+++ b/common_style.css
@@ -10,7 +10,11 @@
     --dark-yellow: #efe144;
     --cylindrical: #746999;
     --gray: #2b2b2b;
-    --medium-gray: #999;
+    --gray38: #616161;
+    --dark-gray: #a4a4a4;
+    --dim-gray: #737373;
+    --light-gray: #c9c9c9;
+    --medium-gray: #404040;
     --black-magic: #000;
 }
 html {
