Change design and add link on Pokémon page

--- a/common_style.css
+++ b/common_style.css
@@ -3,7 +3,7 @@
     --mettwurst: #DD7364;
     --orchid: #76CCE1;
     --lightsalmon: #0dcaf017;
-    --orchid-transparent: #0dcaf012;
+    --cylindrical-transparent: #74699914;
     --cyan: #008A87;
     --denim: #689dcb;
     --yellow: #FFEA00;
