--- a/main_page.css
+++ b/main_page.css
@@ -34,25 +34,21 @@
 }
 input[type="text"] {
     width: 50%;
-    border: 1px solid var(--lightsalmon);
+    border: 1px solid var(--cylindrical);
     border-radius: 4px 0 0 4px;
-    background-color: var(--orchid-transparent);
+    background-color: var(--cylindrical-transparent);
     color: var(--gray);
     padding: 5px 10px 5px 15px;
 }
 input[type="text"]:focus {
-    outline: 1px solid var(--orchid);
+    outline: 1px solid var(--cylindrical);
 }
 .button-submit {
-    background-color: var(--bs-cyan);
+    background-color: var(--cylindrical);
     border: none;
     border-radius: 0 4px 4px 0;
     padding: 6px 25px;
 }
-.container-fluid .card-block {
-    background-color: var(--cyan);
-}
-
 
 /*card-block container*/
 .grid-container {
@@ -64,18 +60,15 @@ input[type="text"]:focus {
     list-style-type: none;
 }
 .block-pokemon .card-block {
-    background-color: var(--cyan);
+    background-color: var(--yellow);
     width: 143px;
     height: 160px;
     box-shadow: 0 0 30px 0 rgb(0 0 0 / 30%);
 }
-/*.block-pokemon .card-block:nth-child(2n) {
-    background-color: var(--cylindrical);
-}*/
-.card-block .yellow-block {
+.card-block .blue-block {
     width: 125px;
     height: 146px;
-    background-color: var(--dark-yellow);
+    background-color: var(--denim);
     background-image: url(img/bg-pattern.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -85,7 +78,7 @@ input[type="text"]:focus {
     border-radius: 30px;
     margin: 0 auto;
 }
-.yellow-block .img-position {
+.blue-block .img-position {
     text-align: center;
 }
 .img-position .pokemon-img {
@@ -96,7 +89,7 @@ input[type="text"]:focus {
 }
 .img-position .button-style {
     border: none;
-    background-color: var(--denim);
+    background-color: var(--medium-gray);
     border-radius: 4px;
     padding: 2px 10px;
     color: var(--bs-body-bg);
@@ -112,14 +105,14 @@ input[type="text"]:focus {
 }
 .page-item .color-link {
     color: var(--black-magic);
-    background-color: var(--orchid-transparent);
-    border-color: var(--bs-cyan);
+    background-color: var(--cylindrical-transparent);
+    border-color: var(--cylindrical);
     border-radius: 4px;
     padding: 4px 15px;
 }
 .page-link:focus, .color-link:focus {
     color: var(--black-magic);
-    box-shadow: 0 0 0 0.1rem rgb(13 202 240 / 25%);
+    box-shadow: 0 0 0 0.1rem rgb(116 105 153 / 25%);
 }
 
 @media screen and (max-width: 992px) {
