Complete "Compare page" with responsive elements on the page. Add styles, tables

--- a/compare_list.css
+++ b/compare_list.css
@@ -1,20 +1,22 @@
 body {
     background-image: url("img/pattern.png");
 }
+.bg-color {
+    background-color: var(--white);
+    height: 100vh;
+}
+.margin-side {
+    margin: 0 3rem;
+}
 
 /*button to return on main page*/
-.transition-button {
-    /*position: relative;
-    top: 0;
-    left: 0;*/
-}
-.transition-button .click{
+.move-back{
     border: none;
     background: none;
     text-decoration: underline 0.15rem rgba(0, 0, 0, 0);
     transition: text-decoration-color 300ms;
 }
-.transition-button:hover .click {
+.move-back:hover {
     text-decoration-color: rgba(0, 0, 0, 1);
 }
 
@@ -29,6 +31,8 @@ body {
 }
 .mini-container .button-container-position {
     position: absolute;
+    z-index: 1000;
+    inset: 4rem auto 0 auto;
 }
 .link-position {
     margin: 0 auto;
@@ -41,16 +45,20 @@ body {
 .container-fluid.cover-container {
     position: relative;
 }
+main.container-items {
+    margin-top: 4rem;
+}
 
 /*table with pokemons*/
 .show-items {
     width: 100%;
-    margin: 0 auto;
+    margin-bottom: 20px;
 }
 .title-point {
-    width: calc(100% / 4);
-    font-family: 'Faustina', serif;
+    width: calc(100% / 3);
+    font-family: 'Athiti', sans-serif;
     font-size: 28px;
+    font-weight: 500;
 }
 .title-position {
     padding-left: 5px;
@@ -59,56 +67,128 @@ body {
     font-family: 'Texturina', serif;
     font-size: 28px;
     text-align: center;
+    font-weight: 500;
+}
+.title-style {
+    font-weight: 600;
 }
 .hr-line-title {
     width: 50%;
     border: 1px solid var(--black-magic);
-    margin: 0 0 2rem 0;
+    margin: 0 0 20px 0;
+
 }
 .hr-line {
     width: 70%;
     border: 1px solid var(--black-magic);
-    margin: 0 auto 2rem auto;
+    margin: 0 auto 20px auto;
 }
-
-/*pokemon card*/
-.card-block {
+.pokemon-items {
+    text-align: center;
+}
+.pokemon-card {
+    width: 50%;
     background-color: var(--yellow);
-    width: 204px;
-    height: 215px;
-    box-shadow: 0 0 30px 0 rgb(0 0 0 / 30%);
     margin: 0 auto;
+    padding: 10px;
 }
-.card-block .blue-block {
-    width: 190px;
-    height: 195px;
+.pokemon-img {
+    width: 100%;
     background-color: var(--denim);
+    border-radius: 4px;
     background-image: url(img/bg-pattern.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-x: -4px;
-    position: relative;
-    top: 11px;
-    border-radius: 30px;
-    margin: 0 auto;
 }
-.blue-block .img-position {
-    text-align: center;
-}
-.img-position .pokemon-img {
-    width: 186px;
-    height: 191px;
-    position: relative;
-    top: -14px;
-}
-.img-position .button-style {
+.button-style {
+    width: 100%;
     border: none;
     border-radius: 4px;
     background-color: var(--medium-gray);
-    position: relative;
-    bottom: 53px;
     font-family: 'Texturina', serif;
-    font-size: 23px;
+    font-size: 28px;
     color: var(--bs-body-bg);
-    padding: 0 10px 6px 10px;
+    padding-bottom: 7px;
+    margin-top: 10px;
+}
+
+/*table with extra information for each pokemon*/
+.show-info th, .show-info td {
+    border-width: 1px 0;
+    border-style: solid;
+    border-color: var(--shade-gray);
+    border-top: none;
+}
+.show-info th {
+    font-size: 22px;
+    font-family: 'Athiti', sans-serif;
+    vertical-align: middle;
+    padding-left: 5px;
+}
+.show-info td {
+    font-size: 16px;
+    text-align: center;
+    vertical-align: middle;
+}
+.show-info {
+    background-color: var(--gray97);
+    width: 100%;
+    margin: 0 auto;
+    line-height: 1.2;
+}
+.highlight-power {
+    border-radius: 5px;
+    background-color: var(--bs-danger);
+    color: var(--bs-white);
+    padding: 2px 10px 4px 10px;
+}
+
+@media screen and (max-width: 992px) {
+    .heading-style {
+        margin-top: 1rem;
+    }
+    .mini-container .button-container-position {
+        inset: 2rem auto 0 auto;
+    }
+    .hr-line-title {
+        width: 80%;
+    }
+    main.container-items {
+        margin-top: 2rem;
+    }
+    .title-point, .info-point {
+        font-size: 22px;
+    }
+    .pokemon-card {
+        width: 90%;
+    }
+    .button-style {
+        font-size: 12px;
+        padding-bottom: 3px;
+        margin-top: 4px;
+    }
+
+}
+@media screen and (max-width: 420px) {
+    .heading-style {
+        font-size: 34px;
+    }
+    .margin-side {
+        margin: 0 1rem;
+    }
+    main.container-items {
+        margin-top: 1rem;
+    }
+    .title-point, .info-point, .show-info th {
+        font-size: 18px;
+    }
+    .pokemon-card {
+        width: 80%;
+        padding: 5px;
+    }
+    .button-style {
+        font-size: 12px;
+        padding-bottom: 3px;
+        margin-top: 4px;
+    }
 }
