--- a/common_style.css
+++ b/common_style.css
@@ -12,9 +12,11 @@
     --gray: #2b2b2b;
     --gray38: #616161;
     --dark-gray: #a4a4a4;
+    --gray97: #f7f7f7;
     --dim-gray: #737373;
     --light-gray: #c9c9c9;
     --medium-gray: #404040;
+    --shade-gray: #8f8f8f;
     --black-magic: #000;
 }
 html {
