--- a/pokemon_page.css
+++ b/pokemon_page.css
@@ -20,23 +20,24 @@ body {
 }
 .style-pagination {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 50%;
     height: 4rem;
     background-color: var(--light-gray);
 }
 .title-pokemon {
-    font-family: 'Faustina', serif;
+    font-family: 'Texturina', serif;
     font-size: 24px;
-    color: #616161;
+    color: var(--black-magic);
+    font-weight: 600;
     margin-top: 0.5rem;
 }
 
 /*pokemon card*/
 .items-position {
     width: 80%;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-bottom: 5rem;
     margin: 0 auto;
 }
@@ -55,47 +56,33 @@ body {
     text-align: justify;
     margin: 0 auto 3rem auto;
 }
-.card-block {
+.pokemon-card {
+    width: 30%;
     background-color: var(--yellow);
-    width: 325px;
-    height: 365px;
-    box-shadow: 0 0 30px 0 rgb(0 0 0 / 30%);
+    padding: 10px;
 }
-.card-block .blue-block {
-    width: 300px;
-    height: 345px;
+.pokemon-img {
+    width: 100%;
     background-color: var(--denim);
+    border-radius: 4px;
     background-image: url(img/bg-pattern.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-x: -25px;
-    position: relative;
-    top: 11px;
-    border-radius: 30px;
-    margin: 0 auto;
 }
-.blue-block .img-position {
-    text-align: center;
-}
-.img-position .pokemon-img {
-    width: 253px;
-    height: 256px;
-    position: relative;
-    top: 30px;
-}
-.img-position .button-style {
+.button-style {
+    width: 100%;
     border: none;
     border-radius: 4px;
     background-color: var(--medium-gray);
     font-family: 'Texturina', serif;
     font-size: 28px;
     color: var(--bs-body-bg);
-    padding: 0 10px 6px 10px;
+    padding-bottom: 7px;
+    margin-top: 10px;
 }
 
 /*table*/
 th, td {
-    font-family: 'Faustina', serif;
     font-size: 16px;
     border-width: 1px 0;
     border-style: solid;
@@ -106,6 +93,7 @@ th, td {
     font-size: 32px;
     border: none;
     padding-bottom: 10px;
+    font-weight: 400;
 }
 .title-point {
     color: var(--dim-gray);
@@ -113,13 +101,13 @@ th, td {
 }
 .info-point {
     color: var(--black-magic);
-    font-family: 'Athiti', sans-serif;
+    font-family: 'Texturina', serif;
 }
 .highlight-power {
     border-radius: 5px;
     background-color: var(--bs-danger);
     color: var(--bs-white);
-    padding: 3px 10px;
+    padding: 2px 10px 4px 10px;
 }
 
 @media screen and (max-width: 992px) {
@@ -131,17 +119,10 @@ th, td {
     }
     .short-info {
         font-size: 16px;
+        margin: 0 auto 2rem auto;
     }
     .items-position {
         padding-bottom: 3rem;
-    }
-    .card-block {
-        width: 292px;
-        margin-bottom: 2rem;
-    }
-    .card-block .blue-block {
-        width: 268px;
-        background-position-x: -30px;
     }
     .title-data {
         font-size: 25px;
@@ -149,11 +130,26 @@ th, td {
     th, td {
         line-height: 2;
     }
+    .mobile-mt {
+        margin-top: 2rem;
+    }
+    .pokemon-card {
+        width: 50%;
+        margin: 0 auto;
+    }
+    .button-style {
+        padding-bottom: 3px;
+        margin-top: 4px;
+    }
 }
 @media screen and (max-width: 360px) {
-    .card-block .blue-block {
-        width: 245px;
-        background-position-x: -50px;
+    .pokemon-card {
+        width: 80%;
+    }
+    .button-style {
+        font-size: 12px;
+        padding-bottom: 3px;
+        margin-top: 4px;
     }
 }
 
