--- a/compare_list.css
+++ b/compare_list.css
@@ -100,7 +100,7 @@ main.container-items {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.button-style {
+.name-pokemon {
     width: 100%;
     border: none;
     border-radius: 4px;
@@ -162,7 +162,7 @@ main.container-items {
     .pokemon-card {
         width: 90%;
     }
-    .button-style {
+    .name-pokemon {
         font-size: 12px;
         padding-bottom: 3px;
         margin-top: 4px;
@@ -186,7 +186,7 @@ main.container-items {
         width: 80%;
         padding: 5px;
     }
-    .button-style {
+    .name-pokemon {
         font-size: 12px;
         padding-bottom: 3px;
         margin-top: 4px;
