--- a/pokemon_page.css
+++ b/pokemon_page.css
@@ -69,7 +69,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.button-style {
+.name-pokemon {
     width: 100%;
     border: none;
     border-radius: 4px;
@@ -77,6 +77,7 @@ body {
     font-family: 'Texturina', serif;
     font-size: 28px;
     color: var(--bs-body-bg);
+    text-align: center;
     padding-bottom: 7px;
     margin-top: 10px;
 }
@@ -138,7 +139,7 @@ th, td {
         width: 50%;
         margin: 0 auto;
     }
-    .button-style {
+    .name-pokemon {
         padding-bottom: 3px;
         margin-top: 4px;
     }
@@ -147,7 +148,7 @@ th, td {
     .pokemon-card {
         width: 80%;
     }
-    .button-style {
+    .name-pokemon {
         font-size: 12px;
         padding-bottom: 3px;
         margin-top: 4px;
