--- a/common_style.css
+++ b/common_style.css
@@ -15,6 +15,8 @@
     --gray97: #f7f7f7;
     --dim-gray: #737373;
     --light-gray: #c9c9c9;
+    --very-light: #ddd;
+    --medium-light-gray: #aaa;
     --medium-gray: #404040;
     --shade-gray: #8f8f8f;
     --black-magic: #000;
