--- a/pokemon_page.css
+++ b/pokemon_page.css
@@ -47,6 +47,7 @@ body {
     font-weight: 700;
     color: var(--denim);
     text-align: center;
+    text-transform: uppercase;
     margin: 3rem auto 2rem auto;
 }
 .short-info {
@@ -69,7 +70,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.name-pokemon {
+.name-card {
     width: 100%;
     border: none;
     border-radius: 4px;
@@ -78,6 +79,7 @@ body {
     font-size: 28px;
     color: var(--bs-body-bg);
     text-align: center;
+    text-transform: capitalize;
     padding-bottom: 7px;
     margin-top: 10px;
 }
@@ -103,13 +105,20 @@ th, td {
 .info-point {
     color: var(--black-magic);
     font-family: 'Texturina', serif;
+    text-transform: capitalize;
+    padding-right: 25px;
+}
+.inside-border {
+    border: none;
 }
 .highlight-power {
     font-family: 'Texturina', serif;
     border-radius: 5px;
     background-color: var(--bs-danger);
     color: var(--bs-white);
+    text-transform: capitalize;
     padding: 2px 10px 4px 10px;
+    margin-right: 5px;
 }
 
 @media screen and (max-width: 992px) {
@@ -139,7 +148,7 @@ th, td {
         width: 50%;
         margin: 0 auto;
     }
-    .name-pokemon {
+    .name-card {
         padding-bottom: 3px;
         margin-top: 4px;
     }
@@ -148,7 +157,7 @@ th, td {
     .pokemon-card {
         width: 80%;
     }
-    .name-pokemon {
+    .name-card {
         font-size: 12px;
         padding-bottom: 3px;
         margin-top: 4px;
